# datacat

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cahier_des_charges_analytics.md  datacat.example.toml  deny.toml  docker-compose.yml
.github/workflows/: ci.yml  docs.yml
backend/: Cargo.toml  Dockerfile  alert_rules.example.json
backend/migrations/: 0001_schema.sql  0002_functions.sql  0003_logs.sql  0004_traces.sql  0005_read_indexes.sql  0006_metrics.sql
backend/src/: config.rs  db.rs  error.rs  grpc.rs  ingest.rs  lib.rs  main.rs  ratelimit.rs  routes.rs  settings.rs  telemetry.rs
backend/src/alerting/: eval.rs  mod.rs  notify.rs  rules.rs
backend/src/api/: mod.rs  routes.rs
backend/src/companion/: mod.rs
backend/src/db/: mod.rs  partitions.rs
backend/src/events/: mod.rs  model.rs
backend/src/ingest/: mod.rs
backend/src/logs/: grpc.rs  intake.rs  mod.rs  model.rs
backend/src/metrics/: grpc.rs  intake.rs  mod.rs  model.rs
backend/src/otlp/: json.rs  mod.rs  proto.rs
backend/src/query/: engine.rs  mcp.rs  mod.rs  routes.rs
backend/src/security/: anomaly.rs  mod.rs  ratelimit.rs  token.rs
backend/src/traces/: grpc.rs  intake.rs  mod.rs  model.rs
backend/tests/: alerting_integration.rs  companion_integration.rs  integration.rs  logs_integration.rs  metrics_integration.rs  query_integration.rs  traces_integration.rs
backend/tests/common/: mod.rs
backend/tests/fixtures/: ed25519_private.pem  ed25519_public.pem  rsa_private.pem  rsa_public.pem
companion/: Cargo.toml  README.md  companion.example.toml
companion/src/: agent.rs  alert.rs  config.rs  lib.rs  main.rs
companion/tests/: integration.rs
docs/: CONFORMITE.md  CONTRACT.md  README.md  alerting.md  architecture.md  cold-storage.md  companion.md  configuration.md  deployment.md  integration.md  mcp.md  otel-logs.md  otel-metrics.md  read-cold.md  read-hot.md  security-review.md  security.md  token-contract.md  traces.md
examples/: README.md  run-e2e.sh
examples/demo-backend/: Cargo.toml
examples/demo-backend/src/: main.rs
examples/e2e/: db-admin.ts  harness.ts  package-lock.json  package.json
examples/web-app/: index.html  package-lock.json  package.json  vite.config.ts
examples/web-app/src/: App.tsx
exporter/: Cargo.toml  README.md  run-tests.sh
exporter/src/: config.rs  export.rs  lib.rs  main.rs  schema.rs
exporter/tests/: e2e_export.rs
mcp/: README.md  package-lock.json  package.json  tsconfig.json
mcp/src/: datacat.ts  index.ts  server.test.ts  server.ts
projects/: example.toml
reader/: Cargo.toml  run-tests.sh
reader/src/: config.rs  engine.rs  lib.rs  main.rs  output.rs  sandbox.rs  schema.rs
reader/tests/: e2e_cold_query.rs
sdk-flutter/: pubspec.yaml
sdk-flutter/lib/: datacat_sdk.dart
sdk-flutter/lib/src/: client.dart  storage.dart  token_cache.dart
sdk-typescript/src/: client.ts  index.ts  queue.ts  session.ts
sdk-typescript/src/__tests__/: client.test.ts  helpers.ts
sdks/flutter/: README.md  pubspec.yaml
sdks/flutter/lib/: datacat_sdk.dart
sdks/flutter/lib/src/client/: client.dart
sdks/flutter/lib/src/core/: event.dart
sdks/flutter/test/: client_test.dart
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdks/typescript/src/: index.ts
sdks/typescript/src/__tests__/: client.test.ts  helpers.ts
sdks/typescript/src/client/: index.ts
sdks/typescript/src/queue/: index.ts
sdks/typescript/src/session/: index.ts
sdks/typescript/src/token/: index.ts  manager.ts
sdks/typescript/src/types/: index.ts
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/src/components/: Landing.astro
website/src/content/docs/: alerting.md  architecture.md  cold-storage.md  companion.md  configuration.md  contract.md  deployment.md  docker-telemetry.md  index.mdx  installation.md  mcp.md  otel-logs.md  otel-metrics.md  overview.md  quickstart.md  read-cold.md  read-hot.md  sdks.md  security.md  start.mdx  token.md  traces.md
website/src/content/docs/fr/: alerting.md  architecture.md  cold-storage.md  companion.md  configuration.md  contract.md  deployment.md  docker-telemetry.md  index.mdx  installation.md  mcp.md  otel-logs.md  otel-metrics.md  overview.md  quickstart.md  read-cold.md  read-hot.md  sdks.md  security.md  start.mdx  token.md  traces.md
website/src/content/docs/fr/integrate/: backend.md  flutter.md  opentelemetry.md  web-app.md
website/src/content/docs/fr/tutorials/: alert-to-slack.md  first-event.md  instrument-a-service.md
website/src/content/docs/integrate/: backend.md  flutter.md  opentelemetry.md  web-app.md
website/src/content/docs/tutorials/: alert-to-slack.md  first-event.md  instrument-a-service.md
website/src/styles/: theme.css
