[workspace]
resolver = "2"
members = ["backend"]
# `exporter` est une dépendance (path) du backend pour l'export froid embarqué, mais conserve son
# propre `[workspace]` (crate autonome) : on l'exclut donc du workspace racine pour éviter le
# conflit « multiple workspace roots ».
exclude = ["exporter", "reader"]

[workspace.package]
edition = "2021"
license = "Proprietary"
rust-version = "1.80"

[profile.release]
lto = "thin"
codegen-units = 1
# `unwind` (et non `abort`) : un panic dans un handler est rattrapé par CatchPanicLayer et
# converti en 500, sans crasher le process (disponibilité — cf. revue de sécurité HDS).
panic = "unwind"
